Fix alignment for carousel items

--- a/blocks/clone-screening-carousel/clone-screening-carousel.css
+++ b/blocks/clone-screening-carousel/clone-screening-carousel.css
@@ -1,6 +1,7 @@
 /* stylelint-disable */
 
-.clone-screening-carousel {
+.clone-screening-carousel .carousel-item {
+    align-items: start;
 }
 
 .clone-screening-carousel .carousel-item-2 .carousel-item-image,
